[fix] wrap width

--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .wrap {
-    width: 750px;
+    width: 840px;
   }
 }
 header {
